--- a/BrainW/BrainW/App.config
+++ b/BrainW/BrainW/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="BrainW.Properties.Settings.pfpa92ConnectionString"
+            connectionString="User Id=root;Password=1234;Host=localhost;Database=pfpa92;SSH Authentication Type=Password"
+            providerName="Devart.Data.MySql" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
