--- a/BrainW/BrainW/BrainW.csproj
+++ b/BrainW/BrainW/BrainW.csproj
@@ -73,6 +73,12 @@
     <Compile Include="frmMenu.Designer.cs">
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmReportes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReportes.Designer.cs">
+      <DependentUpon>frmReportes.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>pfpa92DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="pfpa92DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>pfpa92DataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmacercaDe.resx">
@@ -94,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenu.resx">
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReportes.resx">
+      <DependentUpon>frmReportes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUsuarios.resx">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
@@ -119,6 +133,17 @@
     </None>
     <None Include="pfpa92DataSet.xss">
       <DependentUpon>pfpa92DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="pfpa92DataSet1.xsc">
+      <DependentUpon>pfpa92DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="pfpa92DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>pfpa92DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="pfpa92DataSet1.xss">
+      <DependentUpon>pfpa92DataSet1.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
