--- a/BrainW/BrainW/App.config
+++ b/BrainW/BrainW/App.config
@@ -1,13 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="BrainW.Properties.Settings.pfpa92ConnectionString"
-            connectionString="User Id=root;Password=1234;Host=localhost;Database=pfpa92;SSH Authentication Type=Password"
-            providerName="Devart.Data.MySql" />
+        <add name="BrainW.Properties.Settings.pfpa92ConnectionString" connectionString="User Id=root;Password=1234;Host=localhost;Database=pfpa92;SSH Authentication Type=Password" providerName="Devart.Data.MySql" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
